# AIO

./: .gitignore  .sops.yaml  DEEP_LINK_SETUP.md  PRESENTATION_SPEAKER_NOTES.md  README.md  START.md  STEAM_API_KEY.md  STEAM_LOGIN_GUIDE.md  docker-compose.yml  package-lock.json  package.json  tickets.md  wanted.txt  working_launchers.txt
.github/: dependabot.yml
.github/workflows/: codeql.yml  deploy.yaml  desktop-release.yml  test_secret.yml  trivy.yml
backend/: API.md  README.md
backend/api/: .env.example  .gitignore  Dockerfile  data.sqlite  data.sqlite-shm  data.sqlite-wal  generate-keys.bat  generate-keys.sh  go.mod  go.sum  main.go  setup-database.ps1
clusters/gamedivers-prod/: kustomization.yml
frontend/: .gitignore  README.md  README_FRONTEND.md  index.html  package-lock.json  package.json  register-protocol.ps1  start.bat  vite.config.js.timestamp-1769692844137-a366aea1bf5e2.mjs
frontend/public/: auth-success.html
frontend/src/: App.jsx  App.tsx  main.jsx  main.ts  style.css  styles.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
frontend/src-tauri/wix/: deeplink.wxs
gamedivers-site/: .env.example  Dockerfile  README_FRONTEND.md  README_TAURI.md  dockerfile  index.html  main.tsx  nginx.conf  package-lock.json  package.json  tailwind.config.cjs  tsconfig.app.json  vite.config.ts
k8s/: deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  schema.sql  secret-auth.yaml  service-lb.yaml  service.yaml
(+201 files in other folders)
